<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
      >


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/inter_bus_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro1_label"
            android:gravity="center"
            style="@style/TextViewStyle"
            android:textColor="@color/textColor_black"
            android:textSize="22sp"
            android:layout_marginTop="80dp"/>

    <ImageView
            android:id="@+id/bus_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/inro3_bg"
            android:layout_marginTop="45dp"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro1_description"
            android:gravity="center"
            style="@style/TextViewStyle"
            android:textColor="@color/textColor_black"
            android:textSize="18sp"
            android:layout_margin="30dp"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/skip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_bg"
            android:layout_margin="30dp"
            android:padding="15dp"
            style="@style/TextViewStyle"
            android:text="@string/Skip_Login"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>


</LinearLayout>
