<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="center"
                android:background="@color/colorPrimaryDark">


            <TextView
                    android:id="@+id/loca"
                    android:text="LOCA"
                    android:textSize="16sp"
                    style="@style/TextViewStyle"
                    android:layout_margin="3dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="BUS"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    style="@style/TextViewHeader"
                    android:layout_margin="3dp"
                    android:textSize="16sp"
                    android:layout_toRightOf="@+id/loca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_toEndOf="@+id/loca"/>
        </RelativeLayout>

        <LinearLayout
                android:padding="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/mili"/>

            <TextView
                    android:text="@string/welcom_mili"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    style="@style/TextViewStyle"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>


        </LinearLayout>

        <LinearLayout
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:background="@drawable/border_black"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <TextView
                    style="@style/TextViewStyle"
                    android:text="Lets start with choosing your language"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
            />

            <TextView
                    style="@style/TextViewStyle"
                    android:text="@string/to_choose_press_the_voice_command_button_and_say_your_preferd_language"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:padding="5dp"
                    android:textColor="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <TextView
                    style="@style/TextViewStyle"
                    android:text="@string/eg_say_hindi_for_hindi_english_for_english"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/darkgrey"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </LinearLayout>

        <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <View
                    android:layout_margin="16dp"
                    android:background="@color/grey"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

            <TextView
                    style="@style/TextViewStyle"
                    android:text="OR"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ring_border_black"
                    android:padding="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/darkgrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>

        <LinearLayout
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="15dp"
                android:background="@drawable/border_black"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <TextView
                    style="@style/TextViewStyle"
                    android:text="Choose from the given options"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <HorizontalScrollView
                    android:scrollbars="none"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <LinearLayout
                            android:layout_margin="5dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/border_black"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@style/TextViewStyle"
                                android:id="@+id/english"
                                android:text="English"
                                android:textStyle="bold"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="5dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/border_black"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@style/TextViewStyle"
                                android:id="@+id/hindi"
                                android:text="हिन्दी"
                                android:textStyle="bold"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="5dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/border_black"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@style/TextViewStyle"
                                android:id="@+id/marathi"
                                android:text="मराठी"
                                android:textStyle="bold"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="5dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/border_black"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@style/TextViewStyle"
                                android:id="@+id/gujarati"
                                android:text="ગુજરાતી"
                                android:textStyle="bold"
                                android:textSize="10sp"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="5dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/border_black"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@style/TextViewStyle"
                                android:id="@+id/tamil"
                                android:text="தமிழ்"
                                android:textStyle="bold"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="5dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/border_black"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@style/TextViewStyle"
                                android:id="@+id/telgu"
                                android:text="తెలుగు"
                                android:textStyle="bold"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="5dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/border_black"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@style/TextViewStyle"
                                android:id="@+id/bangala"
                                android:text="বাংলা"
                                android:textStyle="bold"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="5dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/border_black"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@style/TextViewStyle"
                                android:id="@+id/punjabi"
                                android:text="ਪੰਜਾਬੀ"
                                android:textStyle="bold"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>


        </LinearLayout>


    </LinearLayout>

    <ImageView
            android:layout_width="170dp"
            android:layout_height="144dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            app:srcCompat="@drawable/mic"/>

</RelativeLayout>